# VideoEditDemo

./: build.gradle  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/release/app-release/: AndroidManifest.xml  resources.arsc
app/release/app-release/res/animator/: mtrl_card_state_list_anim.xml
app/release/app-release/res/animator-v21/: design_appbar_state_list_animator.xml
app/release/app-release/res/color/: mtrl_card_view_foreground.xml  mtrl_card_view_ripple.xml
app/release/app-release/res/drawable/: $avd_hide_password__0.xml  $avd_hide_password__1.xml  $avd_show_password__0.xml  $avd_show_password__1.xml  abc_btn_check_material_anim.xml  abc_btn_radio_material_anim.xml  design_ic_visibility.xml  design_password_eye.xml  mtrl_dialog_background.xml  tooltip_frame_dark.xml  tooltip_frame_light.xml
app/release/app-release/res/drawable-v23/: mtrl_popupmenu_background_dark.xml
app/release/app-release/res/layout/: abc_action_bar_title_item.xml  abc_action_mode_close_item_material.xml  abc_activity_chooser_view.xml  abc_activity_chooser_view_list_item.xml  abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_material.xml  abc_alert_dialog_title_material.xml  abc_cascading_menu_item_layout.xml  abc_dialog_title_material.xml  abc_expanded_menu_layout.xml  (+73 more)
app/release/app-release/res/layout-land/: mtrl_picker_header_dialog.xml
app/release/app-release/res/layout-sw600dp-v13/: design_layout_snackbar.xml  mtrl_layout_snackbar.xml
app/release/app-release/res/layout-v16/: notification_template_custom_big.xml
app/release/app-release/res/layout-v21/: abc_screen_toolbar.xml  notification_action.xml  notification_action_tombstone.xml  notification_template_custom_big.xml  notification_template_icon_group.xml  test_design_checkbox.xml  test_design_radiobutton.xml
app/release/app-release/res/layout-v22/: abc_alert_dialog_button_bar_material.xml  mtrl_alert_dialog_actions.xml
app/release/app-release/res/layout-v26/: abc_screen_toolbar.xml  mtrl_calendar_month.xml
app/release/app-release/res/layout-watch-v20/: abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_title_material.xml
app/src/main/: AndroidManifest.xml
ffmpeg/: build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  FFmpegUtils.cpp  JavaCallHelper.cpp  JavaCallHelper.h  Log.h  MediaPlayer.cpp  MediaPlayer.h  VideoChannel.cpp  VideoChannel.h  android_log.h  cJSON.c  com_oaks_golf_FFmpegUtils.h  ffmpeg.c  ffmpeg_opt.c  ffmpeg_thread.h  native-lib.cpp  safe_queue.h
ffmpeg/src/main/cpp/ffmpeg_cmd/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.h  ffmpeg_thread.cpp
ffmpeg/src/main/cpp/include/libavcodec/: mathops.h
ffmpeg/src/main/cpp/include/libavcodec/arm/: mathops.h
ffmpeg/src/main/cpp/include/libavformat/: os_support.h
ffmpeg/src/main/cpp/include/libavutil/: internal.h  libm.h  thread.h  timer.h
ffmpeg/src/main/cpp/include/libavutil/arm/: timer.h
gradle/wrapper/: gradle-wrapper.properties
(+82 files in other folders)
